@@ -12,6 +12,8 @@ my $builder = Module::Build->new(
         'Test::More' => 0,
         'Perl6::Slurp' => 0,
         'Test::LongString' => 0,
+        'Test::Exception' => 0,
+        'Test::Deep' => 0,
     },
     configure_requires => { 'Module::Build' => 0.38 },
     requires => {
