@@ -77,7 +77,7 @@ L<Debian::Copyright::Stanza>
 
 =head1 COPYRIGHT & LICENSE
 
-Copyright (C) 2011 Nicholas Bamber L<nicholas@periapt.co.uk>
+Copyright (C) 2011-12 Nicholas Bamber L<nicholas@periapt.co.uk>
 
 This module is substantially based upon L<Debian::Control::Stanza::Source>.
 Copyright (C) 2009 Damyan Ivanov L<dmn@debian.org>
