@@ -119,5 +119,20 @@ sub sort {
     @$self = sort @$self;
 }
 
+=head1 COPYRIGHT & LICENSE
+
+Copyright (C) 2011-12 Nicholas Bamber L<nicholas@periapt.co.uk>
+
+This program is free software; you can redistribute it and/or modify it under
+the terms of the GNU General Public License version 2 as published by the Free
+Software Foundation.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE.
+
+=cut
+
+1;
 
 1;
